--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
               <input type="submit" id="submit" value= " Search" />
            </form>
         </div>
-        <div class="content">
+
+        <div class="contain">
+          <div class="content">
 
             <h1 class="recipeTitle">Recipe</h1>
 
@@ -51,7 +53,7 @@
                  <li id="like"><i class='bx bxs-like'></i><span id="add">0</span></li>
                  <li id="dislike"><i class='bx bxs-dislike' ></i><span id="ADD">0</span></li>
             </div>
-            <!-- <input type="file" id="inputImage" accept="image/png, image/jpg, image/jpeg"> -->
+            <input type="file" id="inputImage" accept="image/png, image/jpg, image/jpeg">
 
             <h2>Comments</h2>
 
@@ -64,7 +66,8 @@
             </form>
             <ul id='list' id='comments'></ul>
            
-  </div>
+          </div>
+        </div>
         </div>
     </section>
 
